@startuml
left to right direction

class Packet {
}

class Appointment {
}

package Keycloak {
    class User {
    }

    class Customer {
    }

    class Organisator {
    }

    class Instructor {
    }
}

Packet -left- Appointment
Packet "*"--"1" Organisator: < owns
Instructor -- User
Customer -- User
Organisator -- User
Offer .. (Packet, Appointment)
(Appointment, Instructor) .. AppointmentManagement
(Appointment, Customer) .. Participation
(Packet, Customer) .. Purchase

@enduml